prompt-engineering/novel-writing-system/versions/v4.0/05-质量评分体系.md
# 05 — 质量评分体系（v4.0）

> **三阶段门禁 + 用户预览确认**。每个阶段的产出必须通过评分 **并经用户确认** 才能进入下一阶段。
> 评分不达标 = 回炉重写；评分通过但用户不满意 = 根据反馈调整。
> 绝不带病前进，绝不替用户做决定。
>
> 设计依据：番茄小说签约编辑审稿标准、起点中文网精品评估体系、
> AI小说章节评估18项指标体系、LongStoryEval国际评估框架、
> 各平台首章完读率/追读率/书架比等真实数据指标。

---

## 评分总览（v4.0 三阶段门禁）

```
━━━ 第一阶段：基建锁定 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  世界观 ──→ 角色档案 ──→ 关系网络 ──→ 故事概览卡
                                          │
                                          ▼
                                  【基建整体评分】≥95?
                                       │      │
                                      否      是
                                       │      │
                                    回炉重写   ▼
                                        【用户预览确认】
                                           │      │
                                        不满意    确认
                                           │      │
                                       反馈调整   ▼
                                              🔒 基建锁定

━━━ 第二阶段：开篇预览 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  详细大纲 ──→ 【大纲评分】≥90? ──→ 黄金三章正文 ──→ 【开篇评分】≥90?
                    │                                       │
                   否→修改                                  否→重写
                                                            │
                                                           是
                                                            ▼
                                                    【用户预览确认】
                                                       │      │
                                                    不满意    确认
                                                       │      │
                                                   反馈调整   ▼
                                                          📌 开篇定稿

━━━ 第三阶段：连载生产 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  写第N章 ──→ 状态更新 ──→ 连贯性检查 ──→ 爽感审计 ──→ 【章节评分】≥80?
    ↑                                                      │
    └──────────────── 通过则继续，不通过则修改 ──────────────┘
```

| 评分类型 | 适用阶段 | 及格线 | 用户确认 | 理由 |
|---------|---------|--------|---------|------|
| **基建整体评分** | 世界观+角色+关系（作为整体） | **≥95分** | **必须** | 地基决定大厦高度，用户必须认可方向 |
| **大纲评分** | 章节大纲 | **≥90分** | 否 | 施工图纸，评分通过即可 |
| **开篇评分** | 黄金三章 | **≥90分** | **必须** | 开篇是用户第一次"看到小说"，必须满意 |
| **章节评分** | 第4章起每章 | **≥80分** | 否 | 连载阶段自动流转，评分通过即可 |

---

## 一、基建整体评分（≥95分 + 用户确认 才能继续）

> **v4.0 关键变更**：世界观、角色、关系不再分三次独立评分。
> 先全部生成，再作为一个整体评分。因为它们是相互依赖的——
> 世界观决定角色设计空间，角色决定关系网，关系网反过来验证角色设计。
>
> 适用于：第一阶段（世界观 + 角色档案 + 关系网络 + 故事概览卡）

### 提示词

```markdown
# 角色：你是一位资深网文策划总监，负责项目立项前的质量审核

## 任务
对以下基建产出进行 **整体评分**。世界观、角色、关系网络是一个有机整体，
必须放在一起评估它们是否相互支撑、相互匹配。
满分100分，≥95分通过，<95分必须重写。

评分通过后，你还需要生成一张【故事概览卡】供用户预览确认。

## 输入（全部基建产出，作为整体输入）
- 【世界观设定 JSON】：{{阶段一输出}}
- 【角色档案 JSON】：{{阶段二输出}}
- 【关系网络 JSON】：{{阶段三输出}}
- 小说类型：{{类型}}
- 目标平台：{{平台}}
- 字数档位：{{short/medium/long/ultra_long}}
- 激活引擎：{{引擎列表}}

## 评分维度

### A. 世界观评分（当评分对象为世界观时）

| 维度 | 分值 | 评分标准 |
|------|------|---------|
| **自洽性** | 25分 | 所有规则、设定之间无矛盾；力量体系的获取/升级/代价逻辑闭环；地理/历史/社会结构相互支撑 |
| **创新性** | 25分 | 核心设定是否有"从未见过"的元素；是否通过了反套路检查；innovation_report 是否有说服力 |
| **承载力** | 20分 | 世界观能否支撑目标字数的故事量；是否有足够的探索空间和冲突来源；长篇/超长篇是否有洋葱模型纵深 |
| **代入感** | 15分 | 读者能否快速理解并沉浸；核心规则是否能用一句话说清；是否有让人"想生活在这个世界"的吸引力 |
| **平台适配** | 15分 | 设定复杂度是否匹配平台读者（番茄要简洁直白，起点可以复杂） |

**扣分红线（触发任一项直接降至60分以下）：**
- 力量体系存在明显逻辑矛盾
- 核心设定与已有热门作品高度雷同且无差异化
- 世界观过于复杂，前3章无法让读者理解基本规则
- 系统流的系统命中黑名单（签到/鉴定/无限抽奖等）

### B. 角色评分（当评分对象为角色档案时）

| 维度 | 分值 | 评分标准 |
|------|------|---------|
| **主角魅力** | 25分 | 性格是否立体（有优点也有缺陷）；动机是否清晰有力；缺陷是否与主线矛盾相关；读者是否愿意跟随这个角色走完全书 |
| **差异化** | 20分 | 核心角色之间性格是否可区分（MBTI不重复）；说话风格是否各有特色（遮住名字能猜出是谁）；外貌描写是否有记忆点 |
| **弧光设计** | 20分 | 每个核心角色是否有完整的成长弧（起点→转折→终点）；弧光是否与主线剧情联动 |
| **功能性** | 20分 | 每个角色是否有存在的必要（删掉会影响剧情吗）；角色数量是否匹配字数档位；是否有工具人角色 |
| **类型适配** | 15分 | 言情CP是否有互补碰撞设计；悬疑嫌疑人是否各有动机；都市身份反差是否有故事性；历史人物是否多面 |

**扣分红线：**
- 主角没有明确的性格缺陷（完美人设=无聊人设）
- 反派动机是"纯粹的恶"
- 女性角色全部围着男主转，没有独立目标
- 核心角色说话风格完全相同

### C. 关系网评分（当评分对象为关系网络时）

| 维度 | 分值 | 评分标准 |
|------|------|---------|
| **网络密度** | 20分 | 每个核心角色是否至少与3个角色有直接关系；是否存在孤立角色 |
| **动态性** | 25分 | 关系是否有演变规划（不是一成不变）；是否有至少1组"表面≠真实"的暗线 |
| **冲突潜力** | 25分 | 关系网是否能自然产生冲突；对手升级链是否清晰；阵营对立是否有张力 |
| **情感线质量** | 15分 | 感情线是否有完整的发展规划；CP关系是否有化学反应的基础 |
| **服务剧情** | 15分 | 关系网是否与主线矛盾紧密关联；是否有"牵一发动全身"的关键关系 |

**扣分红线：**
- 核心角色之间关系单一（只有敌/友两种）
- 关系网与主线剧情脱节
- 对手升级链不清晰或难度不递增

## 输出格式

```json
{
  "infrastructure_score": {
    "target": "世界观/角色档案/关系网络",
    "dimensions": [
      {"name": "维度名", "score": 0, "max": 25, "detail": "具体评价"},
      {"name": "维度名", "score": 0, "max": 20, "detail": "具体评价"}
    ],
    "total_score": 0,
    "red_flags": ["触发的红线（如有）"],
    "grade": "S(≥95)/A(90-94)/B(80-89)/C(70-79)/D(<70)",
    "passed": true,
    "verdict": "通过/回炉重写",
    "issues": ["需要修改的问题"],
    "suggestions": ["具体修改建议"],
    "strengths": ["做得好的地方"],

    "synergy_check": {
      "world_supports_characters": "世界观是否为角色提供了足够的成长空间和冲突来源（是/否+说明）",
      "characters_fit_world": "角色设定是否与世界观匹配（能力/身份/动机是否合理）",
      "relationships_drive_plot": "关系网是否能自然驱动主线剧情",
      "story_arc_uses_all": "故事弧是否充分利用了世界观、角色和关系的潜力",
      "synergy_score": "整体协同度评分（1-10）"
    }
  }
}
```

## 判定规则
- **≥95分 且 协同度≥8**：通过评分，进入用户预览环节
- **90-94分**：微调后通过（列出需要微调的具体项，修改后无需重新全面评分）
- **80-89分**：部分重写（列出需要重写的维度，其他维度保留）
- **<80分**：全部重写
- **协同度<6**：即使总分≥95，也需要调整（说明哪些部分不协调）
- **触发红线**：无论总分多少，直接判定全部重写
```

### 用户预览确认

评分通过后，系统生成【故事概览卡】呈现给用户（格式见 README.md）。

用户有三种选择：

```yaml
user_preview:
  option_1:
    action: "确认锁定"
    description: "用户对基建整体满意，锁定所有设定"
    result: "基建进入锁定状态，进入第二阶段"
  
  option_2:
    action: "局部调整"
    description: "用户对大方向满意，但某些细节需要修改"
    example: "主角性格太冷淡了，能不能加点幽默感？"
    result: "根据反馈修改对应部分，重新评分（仅评修改部分+协同度）"
  
  option_3:
    action: "推翻重来"
    description: "用户对整体方向不满意"
    example: "这个世界观不够吸引我，换个方向"
    result: "回到阶段一重新生成"
```

### 基建锁定机制

用户确认后，基建正式锁定：

```yaml
infrastructure_lock:
  locked_items:
    - "世界观核心设定（力量体系/地理/社会结构/核心规则）"
    - "主要角色的核心属性（性格/动机/弧光方向）"
    - "核心关系线的走向"
    - "故事主线矛盾和分卷规划"
  
  allowed_changes:
    - "新增次要角色/龙套"
    - "调整具体章节的剧情细节"
    - "微调角色的次要属性（如具体台词风格）"
    - "扩展世界观的未定义区域（不与已定义部分矛盾）"
  
  forbidden_changes:
    - "修改力量体系的核心规则"
    - "改变主角的核心性格或动机"
    - "推翻已确定的核心关系走向"
    - "与已锁定的世界观设定矛盾"
  
  unlock_procedure:
    - "如确需修改已锁定的设定，必须重新走第一阶段流程"
    - "重新评分 + 重新用户确认"
    - "已写的章节需要检查是否与新基建矛盾"
```

---

## 二、大纲评分（≥90分才能继续）

> 适用于：第二阶段（章节大纲），每10章大纲为一个评分单元
> **前置条件**：第一阶段基建已锁定

### 提示词

```markdown
# 角色：你是一位网文大纲审核专家

## 任务
对章节大纲进行质量评分。大纲是施工图纸，方向错了写再多也是浪费。
满分100分，≥90分通过，<90分必须修改。

**重要**：大纲必须严格遵守已锁定的基建设定，任何与基建矛盾的内容直接触发红线。

## 输入
- 【大纲内容】：{{本批次10章大纲}}
- 【🔒已锁定基建 — 世界观设定】：{{阶段一输出}}
- 【🔒已锁定基建 — 角色档案】：{{阶段二输出}}
- 【🔒已锁定基建 — 关系网络】：{{阶段三输出}}
- 【前序大纲（如有）】：{{之前批次的大纲}}

## 评分维度

| 维度 | 分值 | 评分标准 |
|------|------|---------|
| **节奏设计** | 25分 | 潮汐周期分配是否合理；压制期是否≥4章；大爽期是否≥2章；情绪节点密度是否符合平台要求；是否有"情绪真空区" |
| **剧情推进** | 25分 | 主线是否有实质推进（不是原地踏步）；每章是否有明确的剧情功能；是否存在废章（删掉不影响主线） |
| **钩子质量** | 20分 | 每章结尾悬念是否有力；章间衔接是否流畅；是否有让读者"必须看下一章"的驱动力 |
| **伏笔管理** | 15分 | 新伏笔是否有明确的回收计划；旧伏笔是否按时回收；伏笔密度是否合理（不过多也不过少） |
| **一致性** | 15分 | 与世界观/角色/关系网是否一致；角色行为是否符合设定；时间线是否连贯 |

**扣分红线：**
- 连续3章以上没有任何爽点/反转/情绪节点
- 主线剧情连续5章无实质推进
- 出现与基建设定明显矛盾的情节
- 潮汐周期严重失衡（如压制期只有1章就反转）

## 输出格式

```json
{
  "outline_score": {
    "batch": "第X-Y章",
    "dimensions": [
      {"name": "节奏设计", "score": 0, "max": 25, "detail": ""},
      {"name": "剧情推进", "score": 0, "max": 25, "detail": ""},
      {"name": "钩子质量", "score": 0, "max": 20, "detail": ""},
      {"name": "伏笔管理", "score": 0, "max": 15, "detail": ""},
      {"name": "一致性", "score": 0, "max": 15, "detail": ""}
    ],
    "total_score": 0,
    "red_flags": [],
    "grade": "S(≥95)/A(90-94)/B(80-89)/C(70-79)/D(<70)",
    "passed": true,
    "verdict": "通过/修改后重评",
    "weak_chapters": ["第X章：问题描述"],
    "suggestions": ["修改建议"]
  }
}
```

## 判定规则
- **≥90分**：通过，开始写正文
- **80-89分**：修改标注的弱章后通过
- **<80分**：本批次大纲重写
- **触发红线**：直接重写
```

---

## 三、开篇评分（≥90分 + 用户确认 才能继续）

> 适用于：第二阶段（黄金三章正文），这是全书最关键的评分环节
> **前置条件**：第一阶段基建已锁定，大纲评分已通过
> 
> 数据参考：番茄首章完读率>15%才有推荐、第二章读完率60%以上为优秀、
> 第十章读完率>30%为健康、追读率>40%为理想

### 提示词

```markdown
# 角色：你是一位网文平台的首席内容评审官

你每天审阅数百部新书的开篇，决定哪些书能获得推荐位。
你深谙读者心理：读者在第一章的前30秒就决定了是否继续阅读。
你的评分直接关系到这本书的生死。

## 任务
对前3章正文进行严格的开篇质量评分。
开篇是全书的门面，决定了读者是否会给这本书机会。
满分100分，≥90分通过，<90分必须回炉重写。

## 输入
- 【前3章正文】：{{黄金三章正文}}
- 【世界观设定】：{{阶段一输出}}
- 【角色档案】：{{阶段二输出}}
- 【目标平台】：{{平台}}
- 【小说类型】：{{类型}}

## 评分维度

### 第一章评分（40分）

| 子维度 | 分值 | 评分标准 |
|--------|------|---------|
| **首句冲击力** | 8分 | 前30个字是否有钩子（反差/悬念/共鸣/极端处境）；是否避免了环境描写/外貌描写/背景介绍开头 |
| **500字建立** | 8分 | 前500字是否完成：主角出场+第一印象、核心矛盾/处境展示、读者好奇心建立 |
| **1000字展示** | 8分 | 前1000字是否完成：金手指/核心设定初次展示、情绪锚点建立、至少1个小反转 |
| **代入感** | 8分 | 读者是否能快速代入主角视角；主角的处境是否引发共鸣或好奇；信息给予是否恰到好处（不过多不过少） |
| **章末钩子** | 8分 | 结尾悬念是否强到让读者必须点下一章；钩子类型是否匹配类型（危机/秘密/对手/发现） |

### 第二章评分（30分）

| 子维度 | 分值 | 评分标准 |
|--------|------|---------|
| **即时回报** | 10分 | 是否给读者一个即时的满足感（小爽点/小甜点/小揭秘）；读者是否觉得"继续看是值得的" |
| **卖点确认** | 10分 | 金手指/核心设定是否正式展示；读者是否能明确回答"这本书的卖点是什么" |
| **节奏保持** | 10分 | 节奏是否不弱于第一章；信息密度是否保持或提升；结尾悬念是否不弱于第一章 |

### 第三章评分（30分）

| 子维度 | 分值 | 评分标准 |
|--------|------|---------|
| **首个高潮** | 10分 | 是否有一个完整的小高潮（爽点/反转/揭秘/打脸）；高潮是否有层次而非草草带过 |
| **格局展示** | 10分 | 读者是否能清晰回答"主角要干什么"；是否暗示了更大的世界/更强的对手/更深的秘密 |
| **留存钩子** | 10分 | 第三章结尾是否是全书第一个"大钩子"；读者是否产生"这才刚开始"的感觉；是否有强烈的追读欲望 |

### 附加评分（可加分/扣分，±10分）

| 项目 | 加/扣分 | 标准 |
|------|---------|------|
| 对话质量 | +5/-5 | 对话是否体现角色个性；是否有记忆点；是否推动剧情 |
| 文笔流畅度 | +3/-3 | 语言是否流畅自然；是否有病句/冗余；节奏感是否好 |
| 类型契合度 | +2/-2 | 是否符合该类型的开篇惯例和读者期待 |

**扣分红线（触发任一项直接降至60分以下）：**
- 第一章前500字没有出现任何冲突或悬念
- 第一章用环境描写或背景介绍开头
- 前3章结束后读者仍不知道"这本书讲什么"
- 前3章没有任何爽点/甜点/揭秘/反转
- 角色言行与档案设定明显矛盾
- 出现严重的逻辑漏洞或设定矛盾

## 模拟读者测试

除了维度评分外，还需要进行"模拟读者测试"：

```yaml
simulated_reader_test:
  reader_profiles:
    - type: "重度网文读者（日读3万字+）"
      question: "这个读者会在第几章弃书？为什么？"
    - type: "轻度读者（通勤碎片阅读）"
      question: "这个读者看完第一章会点第二章吗？"
    - type: "该类型的核心粉丝"
      question: "这个读者会觉得开篇有新意还是老套？"

  estimated_metrics:
    first_chapter_completion_rate: "预估首章完读率（%）"
    second_chapter_click_rate: "预估第二章点击率（%）"
    third_chapter_bookmark_rate: "预估第三章后加书架率（%）"
    
  platform_benchmark:
    番茄: "首章完读率>15%为及格，>25%为优秀"
    起点: "前3章读完后追读率>30%为及格，>45%为优秀"
```

## 输出格式

```json
{
  "opening_score": {
    "chapter_1": {
      "first_line_impact": {"score": 0, "max": 8, "detail": ""},
      "500w_establishment": {"score": 0, "max": 8, "detail": ""},
      "1000w_showcase": {"score": 0, "max": 8, "detail": ""},
      "immersion": {"score": 0, "max": 8, "detail": ""},
      "chapter_end_hook": {"score": 0, "max": 8, "detail": ""},
      "subtotal": 0
    },
    "chapter_2": {
      "instant_payoff": {"score": 0, "max": 10, "detail": ""},
      "selling_point_confirm": {"score": 0, "max": 10, "detail": ""},
      "pace_maintenance": {"score": 0, "max": 10, "detail": ""},
      "subtotal": 0
    },
    "chapter_3": {
      "first_climax": {"score": 0, "max": 10, "detail": ""},
      "scope_reveal": {"score": 0, "max": 10, "detail": ""},
      "retention_hook": {"score": 0, "max": 10, "detail": ""},
      "subtotal": 0
    },
    "bonus": {
      "dialogue_quality": {"score": 0, "range": "-5 to +5"},
      "writing_fluency": {"score": 0, "range": "-3 to +3"},
      "genre_fit": {"score": 0, "range": "-2 to +2"}
    },

    "total_score": 0,
    "red_flags": [],
    "grade": "S(≥95)/A(90-94)/B(80-89)/C(70-79)/D(<70)",
    "passed": true,
    "verdict": "通过/回炉重写",

    "simulated_reader_test": {
      "heavy_reader_abandon_point": "预计弃书章节和原因",
      "casual_reader_ch2_click": "是否会点第二章（是/否+原因）",
      "genre_fan_novelty": "新意评价（新颖/一般/老套）",
      "estimated_ch1_completion": "预估首章完读率%",
      "estimated_ch2_click": "预估第二章点击率%",
      "estimated_bookmark_rate": "预估加书架率%"
    },

    "rewrite_priority": ["如需重写，按优先级排列需要改进的项"],
    "strengths": ["做得好的地方，重写时保留"]
  }
}
```

## 判定规则
- **≥90分**：通过评分，进入用户预览环节
- **80-89分**：针对性修改（列出具体修改项），修改后重新评分
- **70-79分**：大幅修改（保留框架，重写薄弱章节）
- **<70分**：全部重写（从黄金三章设计阶段重新开始）
- **触发红线**：直接全部重写

### 用户预览确认

开篇评分通过后，将黄金三章正文呈现给用户预览。

用户有三种选择：

```yaml
opening_preview:
  option_1:
    action: "确认定稿"
    description: "用户对开篇满意，定稿进入连载"
    result: "开篇正式定稿，进入第三阶段连载生产"
  
  option_2:
    action: "局部调整"
    description: "用户对整体满意，但某些地方需要修改"
    example: "第二章节奏有点慢/主角的第一句台词不够帅"
    result: "根据反馈修改，重新评分开篇"
  
  option_3:
    action: "推翻重写"
    description: "用户对开篇整体不满意"
    example: "开头不够抓人/这不是我想要的风格"
    result: "回到黄金三章设计阶段重新写"
```

### 不同类型的开篇章数调整

| 类型 | 评分章数 | 理由 |
|------|---------|------|
| 番茄爽文/甜宠 | 前3章 | 读者耐心极低，3章定生死 |
| 起点玄幻/科幻 | 前5章 | 允许更多铺垫，但前5章必须亮出核心卖点 |
| 规则怪谈 | 前3章 | 必须在3章内展示规则体系并让人感到恐惧 |
| 悬疑推理 | 前5章 | 需要更多篇幅建立谜题和嫌疑人 |
| 历史架空 | 前5章 | 需要时间建立时代背景和角色处境 |
| 知乎盐选 | 前2章 | 短篇精品，前2章就要抓住读者 |

> 注意：评分章数可调整，但评分标准不变。
> 超过3章的类型，第4-5章的评分参照第三章的标准，额外要求世界观纵深展示。
```

---

## 四、章节评分（≥80分才能继续）

> 适用于：第三阶段（第4章起的每一章正文）
> **前置条件**：第一阶段基建已锁定，第二阶段开篇已定稿
> 这是日常写作中的质量门禁，标准略低于开篇但仍然严格

### 提示词

```markdown
# 角色：你是一位网文连载质量监控员

## 任务
对最新章节进行质量评分。连载中的每一章都代表着作品的水准，
读者会因为一章烂章弃书。满分100分，≥80分通过，<80分需要修改。

**重要**：章节内容必须严格遵守已锁定的基建设定和已定稿的开篇风格。

## 输入
- 【最新章节正文】
- 【本章大纲（含 thrill_position）】
- 【章节后记 JSON】
- 【前3章的评分记录（用于趋势分析）】

## 评分维度

| 维度 | 分值 | 评分标准 |
|------|------|---------|
| **剧情推进** | 20分 | 本章是否推进了主线/副线；是否有"读完这章后故事前进了"的感觉；是否存在废段落 |
| **角色表现** | 20分 | 角色言行是否符合设定；是否有角色成长/变化的体现；对话是否有个性 |
| **节奏执行** | 20分 | 是否成功执行了计划的潮汐阶段；情绪密度是否达标；节奏是否与前章衔接自然 |
| **钩子效果** | 15分 | 开头是否承接上章并快速抓住注意力；结尾悬念是否有力 |
| **文笔质量** | 15分 | 语言是否流畅；描写是否精炼有效；是否有病句/冗余/重复用词 |
| **类型契合** | 10分 | 是否符合激活引擎的专属要求（参见各引擎的 forbidden 列表） |

**扣分红线（触发任一项直接降至60分以下）：**
- 与已有设定产生明显矛盾（角色性格突变/能力超标/关系错乱）
- 本章删掉后对主线完全没有影响（纯废章）
- 出现激活引擎的 forbidden 项

## 趋势分析

除了单章评分，还需要分析近期趋势：

```yaml
trend_analysis:
  recent_scores: [前3章的评分]
  trend: "上升/稳定/下降"
  alerts:
    - trigger: "连续3章评分<85"
      action: "节奏预警：建议回顾潮汐周期规划，可能需要调整大纲"
    - trigger: "连续5章评分在80-85之间"
      action: "平庸预警：质量稳定但缺乏亮点，建议在下一章制造一个'名场面'"
    - trigger: "单章评分突然下降>15分"
      action: "断崖预警：本章可能存在严重问题，建议重写"
```

## 输出格式

```json
{
  "chapter_score": {
    "chapter": "章节号",
    "dimensions": [
      {"name": "剧情推进", "score": 0, "max": 20, "detail": ""},
      {"name": "角色表现", "score": 0, "max": 20, "detail": ""},
      {"name": "节奏执行", "score": 0, "max": 20, "detail": ""},
      {"name": "钩子效果", "score": 0, "max": 15, "detail": ""},
      {"name": "文笔质量", "score": 0, "max": 15, "detail": ""},
      {"name": "类型契合", "score": 0, "max": 10, "detail": ""}
    ],
    "total_score": 0,
    "red_flags": [],
    "grade": "S(≥95)/A(90-94)/B(80-89)/C(70-79)/D(<70)",
    "passed": true,
    "verdict": "通过/修改后重评",

    "trend": {
      "recent_scores": [],
      "direction": "上升/稳定/下降",
      "alert": "预警信息（如有）"
    },

    "quick_fixes": ["如需修改，最小改动建议"],
    "highlight": "本章最出彩的地方"
  }
}
```

## 判定规则
- **≥90分**：优秀，直接通过
- **80-89分**：合格，通过（但记录改进建议供后续参考）
- **70-79分**：需修改，按 quick_fixes 修改后重新评分
- **<70分**：重写本章
- **触发红线**：直接重写
```

---

## 五、评分流程总图

```
【创作前】
  阶段一(世界观) ──→ 基建评分 ≥95? ──→ 是 ──→ 继续
                                      └→ 否 ──→ 重写阶段一
  阶段二(角色)   ──→ 基建评分 ≥95? ──→ 是 ──→ 继续
                                      └→ 否 ──→ 重写阶段二
  阶段三(关系网) ──→ 基建评分 ≥95? ──→ 是 ──→ 继续
                                      └→ 否 ──→ 重写阶段三

【大纲阶段】
  阶段四(每10章大纲) ──→ 大纲评分 ≥90? ──→ 是 ──→ 继续
                                         └→ 否 ──→ 修改/重写大纲

【开篇阶段】
  黄金三章正文 ──→ 开篇评分 ≥90? ──→ 是 ──→ 开篇定稿
                                    └→ 否 ──→ 回炉重写

【连载阶段】
  第N章正文 ──→ 章节评分 ≥80? ──→ 是 ──→ 发布，写下一章
                                └→ 否 ──→ 修改后重评
                                          │
                              趋势分析 ──→ 如有预警则调整后续大纲
```

---

## 六、评分校准规则

为防止评分虚高或虚低，设置以下校准机制：

```yaml
calibration:
  anti_inflation:
    - "S级(≥95)的章节不应超过全书的20%——如果超过，说明评分标准过松"
    - "开篇评分≥95应该意味着'这个开篇能在番茄拿到A级推荐'"
    - "基建评分≥95应该意味着'这个设定能支撑一部完整的商业网文'"

  anti_deflation:
    - "不应因为'不够完美'就给低分——80分意味着'合格的商业网文水准'"
    - "评分要考虑类型特性：种田文的节奏天然比爽文慢，不能用爽文标准扣分"

  consistency:
    - "同一部小说中，评分标准必须前后一致"
    - "如果第10章和第50章写作水平相同，评分应该相同"
    - "不能因为'前面章节评分高'就对后面章节更严格"

  type_adjustment:
    - "番茄平台的章节评分中，'钩子效果'权重上调5分（从15→20），'文笔质量'下调5分（从15→10）"
    - "起点平台的章节评分中，'文笔质量'权重上调5分（从15→20），'钩子效果'下调5分（从15→10）"
    - "知乎盐选的章节评分中，'文笔质量'权重上调至20分，'类型契合'下调至5分"
```
